--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,7 +14,7 @@ publishDir = "docs"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "Copyright &copy; {year}"
+copyright = "Copyright &copy; JaZzMaGuS {year}"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
