--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -55,7 +55,7 @@ time_format = "15:04"
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "diego.fantinelli@fermibassano.edu.it"
 phone = ""
-address = "Building 1 Room 1, Stanford University, California, 90210, USA"
+address = "ITIS E. Fermi - Str. Santa Croce, 14 - 36061 Bassano del Grappa VI - Italy"
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
 office_hours = """Monday 10:00 to 13:00<br>
@@ -91,8 +91,8 @@ contact_links = [
 #   3: OpenStreetMap (Mapbox)
 map = 2
 map_api_key = "AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"
-latitude = "37.4275"
-longitude = "-122.1697"
+latitude = "45.75205"
+longitude = "11.72787"
 zoom = 15
 
 ############################
